[metadata]
name = clyo
description = Give your Python scripts various flavours of CLI!
long_description = file: README.md, AUTHORS.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Axel Voitier
author_email = axel.voitier@gmail.com
license = MPLv2
license_file = LICENSE
url = https://github.com/AxelVoitier/clyo
classifiers =
    # Development Status :: 1 - Planning
    # Development Status :: 2 - Pre-Alpha
    # Development Status :: 3 - Alpha
    Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3 :: Only
    # Py 3.11 EOL: 2027/10/24
    Programming Language :: Python :: 3.11
    Typing :: Typed
keywords = cli

[options]
packages = find:
include_package_data = True
python_requires = ~=3.11
setup_requires =
    setuptools_scm
install_requires =
    typer[all]
    prompt_toolkit
zip_safe = false  # Because mypy cannot analyse a zip

[options.packages.find]
exclude =
    tests

[options.package_data]
clyo =
    py.typed

[options.extras_require]
dev =
    flake8
    autopep8
    pytest
    pytest-cov
    pytest-html
    mypy
    check-manifest
doc =
    mkdocs
    mkdocs-material
    mkdocstrings[python]
    mkdocs-gen-files
    mkdocs-literate-nav
    mkdocs-section-index
    pillow
    cairosvg
    mike
    mkdocs-git-revision-date-localized-plugin

[flake8]
max-line-length = 100
show-source = true
max-complexity = 15
statistics = true

[mypy]
show_column_numbers = true
show_error_context = false
strict = true
ignore_missing_imports = false

[mypy-setup]
ignore_errors = true
